--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
 
   <title>SpaceWalkers</title>
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -14,14 +17,26 @@
   <![endif]-->
 </head>
 
-<body>
+<body class="container">
 
  <!-- navigation code here -->
 
-  <div class="container home">
+ <div class="navigation">
+  <header>
+    <h2>Space Walker</h2>
+    <nav>
+        <a href="index.html">Home</a>        
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>      
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
+    </nav>
+</div>
 
     <header class="intro">
        <!-- image code here -->
+
+       <img src="img/main-header.png" class="space" alt="space">
 
       <h2>Lift Off</h2>
     
