--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
  <div class="navigation">
   <header>
-    <h2>Space Walker</h2>
+    <h2>Space Walkers</h2>
     <nav>
         <a href="index.html">Home</a>        
         <a href="#">About Us</a>
