--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <![endif]-->
 </head>
 
+
 <body class="container home">
 
  <!-- navigation code here -->
 
  <div class="navigation">
-  <header>
     <h2>Space Walkers</h2>
     <nav>
         <a href="index.html">Home</a>        
@@ -33,7 +33,7 @@
     </nav>
 </div>
 
-    <header class="intro">
+    <div class="intro">
        <!-- image code here -->
 
        <img src="img/main-header.png" class="space" alt="space">
@@ -41,7 +41,7 @@
       <h2>Lift Off</h2>
     
       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-    </header>
+    </div>
 
     <section class="space-images">
         <img src="img/blast.png" class="blast" alt="Rocket blasting off">
